--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,8 @@
 body {
   font-family: "Baloo Tammudu 2";
 }
+.App__container {
+  scroll-snap-type: y mandatory;
+  overflow: auto;
+  height: 100vh;
+}
