--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -13,14 +13,23 @@
   height: 24px;
   width: 80px;
   margin-top: 7px;
+  color: #ff4757;
 }
 .header__center {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  p {
+  a {
+    // padding: 5px 10px;
     margin: 20px;
+    border-radius: 15px;
     text-transform: uppercase;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  a:hover {
+    // text-decoration-line: underline;
+    color: #2b2b2c;
   }
 }
